docs: publicar MkDocs

--- a/site/consulta_completo_credintegral/index.html
+++ b/site/consulta_completo_credintegral/index.html
@@ -1367,7 +1367,7 @@ Este servicio permite consultar la información de un deudor y sus obligaciones,
 <hr />
 <h2 id="url-de-integracion">URL de Integración</h2>
 <ul>
-<li><strong>Ambiente de pruebas:</strong> <code>http://testing-sygma.com/api/consultar_api</code></li>
+<li><strong>Ambiente de pruebas:</strong> <code>https://testing-sygma.com/api/consultar_api</code></li>
 <li><strong>Producción:</strong> <code>POR_DEFINIR/api/consultar_api</code></li>
 </ul>
 <hr />
