--- a/site/invictus_notificacion/index.html
+++ b/site/invictus_notificacion/index.html
@@ -1498,7 +1498,7 @@ Ejemplo: <code>sms=1</code>, <code>email=1</code>, <code>whatsapp=0</code> → s
 <hr />
 <h2 id="url-de-integracion">🔗 URL de Integración</h2>
 <ul>
-<li><strong>Ambiente de Pruebas:</strong> <code>http://testing-sygma.com/api/notificacion_canal</code>  </li>
+<li><strong>Ambiente de Pruebas:</strong> <code>https://testing-sygma.com/api/notificacion_canal</code>  </li>
 <li><strong>Producción:</strong> <code>POR DEFINIR</code></li>
 </ul>
 <hr />
@@ -1620,11 +1620,11 @@ Ejemplo: <code>sms=1</code>, <code>email=1</code>, <code>whatsapp=0</code> → s
 }
 </code></pre>
 <h4 id="ejemplo-de-error">❗ Ejemplo de Error</h4>
-<p>```json
-{
-  "status": "error",
-  "mensaje": "Transacción no encontrada o no válida para reenvío"
-}</p>
+<pre><code class="language-json">{
+  &quot;status&quot;: &quot;error&quot;,
+  &quot;mensaje&quot;: &quot;Transacción no encontrada o no válida para reenvío&quot;
+}
+</code></pre>
 
 
 
