--- a/site/invictus_reenviar_validacion/index.html
+++ b/site/invictus_reenviar_validacion/index.html
@@ -1436,7 +1436,7 @@
 <hr />
 <h2 id="url-de-integracion">🔗 URL de Integración</h2>
 <ul>
-<li><strong>Ambiente de Pruebas:</strong> <code>http://testing-sygma.com/api/reenviar_otp</code>  </li>
+<li><strong>Ambiente de Pruebas:</strong> <code>https://testing-sygma.com/api/reenviar_otp</code>  </li>
 <li><strong>Producción:</strong> <code>POR DEFINIR</code></li>
 </ul>
 <hr />
