--- a/site/invictus_validacion/index.html
+++ b/site/invictus_validacion/index.html
@@ -1622,7 +1622,7 @@ Una vez validado el OTP, el sistema extrae automáticamente la información del 
 <hr />
 <h2 id="url-de-integracion">🔗 URL de Integración</h2>
 <ul>
-<li><strong>Ambiente de Pruebas:</strong> <code>http://testing-sygma.com/api/validar_otp</code>  </li>
+<li><strong>Ambiente de Pruebas:</strong> <code>https://testing-sygma.com/api/validar_otp</code>  </li>
 <li><strong>Producción:</strong> <code>POR DEFINIR</code></li>
 </ul>
 <hr />
