--- a/site/promosumma_originacion_import/index.html
+++ b/site/promosumma_originacion_import/index.html
@@ -1397,7 +1397,7 @@
 <p><code>POST</code></p>
 <h2 id="url-de-integracion">🔗 URL de Integración</h2>
 <ul>
-<li><strong>Ambiente de Pruebas:</strong> <code>http://testing-sygma.com/api/importar_originacion</code></li>
+<li><strong>Ambiente de Pruebas:</strong> <code>https://testing-sygma.com/api/importar_originacion</code></li>
 <li><strong>Producción:</strong> <code>POR DEFINIR</code></li>
 </ul>
 <h2 id="headers-requeridos">📉 Headers Requeridos</h2>
