--- a/site/recaudo_reversar/index.html
+++ b/site/recaudo_reversar/index.html
@@ -1383,7 +1383,7 @@
 <p><strong>Tipo de Servicio:</strong> POST</p>
 <h2 id="url-de-integracion"><strong>URL de Integración</strong></h2>
 <ul>
-<li><strong>Prueba:</strong> <code>http://testing-sygma.com/api/reversar_recaudo</code></li>
+<li><strong>Prueba:</strong> <code>https://testing-sygma.com/api/reversar_recaudo</code></li>
 <li><strong>Producción:</strong> <code>POR_DEFINIR/api/reversar_recaudo</code></li>
 </ul>
 <h2 id="headers"><strong>Headers</strong></h2>
