--- a/site/wolbox/index.html
+++ b/site/wolbox/index.html
@@ -1315,7 +1315,7 @@
 <p><strong>Tipo:</strong> POST</p>
 <h3 id="url-de-integracion">URL de Integración</h3>
 <ul>
-<li><strong>Prueba</strong>  http://testing-sygma.com/ws_consulta</li>
+<li><strong>Prueba</strong>  https://testing-sygma.com/ws_consulta</li>
 <li><strong>Producción:</strong> https://sygma-tech.com.co/ws_consulta</li>
 </ul>
 <h3 id="headers">Headers</h3>
