--- a/site/consulta_municipio/index.html
+++ b/site/consulta_municipio/index.html
@@ -1346,7 +1346,7 @@
 <hr />
 <h2 id="url-de-integracion"><strong>URL de Integración</strong></h2>
 <ul>
-<li><strong>Prueba:</strong> <code>http://testing-sygma.com/api/consulta_municipios</code></li>
+<li><strong>Prueba:</strong> <code>https://testing-sygma.com/api/consulta_municipios</code></li>
 <li><strong>Producción:</strong> <code>POR_DEFINIR/api/consulta_municipios</code></li>
 </ul>
 <hr />
