--- a/site/s_cuota_maxima/index.html
+++ b/site/s_cuota_maxima/index.html
@@ -1433,7 +1433,7 @@ Este servicio permite generar planes de pago simulados a partir de un valor ingr
 <hr />
 <h2 id="url-de-integracion">🛰️ URL de Integración</h2>
 <ul>
-<li><strong>Prueba:</strong> <code>http://testing-sygma.com/api/simulador_previo</code></li>
+<li><strong>Prueba:</strong> <code>https://testing-sygma.com/api/simulador_previo</code></li>
 <li><strong>Producción:</strong> <code>POR_DEFINIR/api/simulador_previo</code></li>
 </ul>
 <hr />
