--- a/site/s_plan_simulador/index.html
+++ b/site/s_plan_simulador/index.html
@@ -1379,7 +1379,7 @@ Este servicio permite generar la simulación de un plan de pagos a partir de un 
 <hr />
 <h2 id="url-de-integracion">🛰️ URL de Integración</h2>
 <ul>
-<li><strong>Prueba:</strong> <code>http://testing-sygma.com/api/datos_simulador</code></li>
+<li><strong>Prueba:</strong> <code>https://testing-sygma.com/api/datos_simulador</code></li>
 <li><strong>Producción:</strong> <code>POR_DEFINIR/api/datos_simulador</code></li>
 </ul>
 <hr />
