--- a/site/tecfinanzas_importar/index.html
+++ b/site/tecfinanzas_importar/index.html
@@ -1396,7 +1396,7 @@ y información financiera dentro de TESEO.</p>
 <p><strong>Tipo de Servicio:</strong> POST</p>
 <h2 id="url-de-integracion"><strong>URL de Integración</strong></h2>
 <ul>
-<li><strong>Prueba:</strong> <code>http://testing-sygma.com/api/originador</code></li>
+<li><strong>Prueba:</strong> <code>https://testing-sygma.com/api/originador</code></li>
 <li><strong>Producción:</strong> <code>POR_DEFINIR/api/originador</code></li>
 </ul>
 <h2 id="headers"><strong>Headers</strong></h2>
